WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286522
AX: AXTextMarker::findMarker doesn't move to the right offset when encountering a non-ASCII character
https://bugs.webkit.org/show_bug.cgi?id=286522
Summary
AX: AXTextMarker::findMarker doesn't move to the right offset when encounteri...
Tyler Wilcock
Reported
2025-01-24 21:23:37 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-24 21:23:45 PST
<
rdar://problem/143609336
>
Tyler Wilcock
Comment 2
2025-01-24 21:33:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39543
EWS
Comment 3
2025-01-25 20:19:28 PST
Committed
289402@main
(fc04b09d028c): <
https://commits.webkit.org/289402@main
> Reviewed commits have been landed. Closing PR #39543 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug