AX: AXTextMarker::findMarker doesn't move to the right offset when encountering a non-ASCII character https://bugs.webkit.org/show_bug.cgi?id=286522 rdar://143609336

Reviewed by Chris Fleizach.

With this commit, we use CachedTextBreakIterator::{preceding, following} to determine how many offsets to move when
encountering non-ASCII characters, preventing AXTextMarker::findMarker from moving to an offset in the middle of a
non-ASCII character (e.g. an emoji).

This partially fixes accessibility/text-marker/text-marker-previous-next.html in ENABLE(AX_THREAD_TEXT_APIS) mode,
which includes an emoji testcase.

* Source/WebCore/accessibility/AXTextMarker.cpp:
(WebCore::AXTextMarker::findMarker const):
* Source/WebCore/accessibility/AXTextRun.h:
(WebCore::AXTextRuns::AXTextRuns):

Canonical link: https://commits.webkit.org/289402@main